--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -346,3 +346,62 @@ a {
         }
     }
 }
+
+.login-container {
+    width: 100vh;
+    height: 100vh;
+    .login {
+        background-color: #fff;
+        width: 600px;
+        border-radius: 12px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 30px;
+            img {
+                width: 50px;
+                vertical-align: middle;
+                margin-right: 10px;
+            }
+        }
+        .input-group {
+            width: 300px;
+            margin: 15px auto;
+            label {
+                display: block;
+                text-transform: uppercase;
+                font-size: 12px;
+                font-weight: bold;
+                color: rgba(0, 0, 0, 0.6);
+                margin-bottom: 3px;
+            }
+            input {
+                padding: 5px 10px;
+                width: 100%;
+                height: 35px;
+                font-size: 16px;
+                border: 1px solid #e3e6ea;
+            }
+        }
+        button {
+            padding: 12px 16px;
+            background-color: #3EBD93;
+            border: none;
+            outline: none;
+            border-radius: 999px;
+            width: 300px;
+            display: block;
+            margin: 20px auto;
+            &:hover {
+                cursor: pointer;
+                opacity: 0.8;
+            }
+        }
+    }
+}
