--- a/frontend/src/assets/css/style.scss
+++ b/frontend/src/assets/css/style.scss
@@ -1,4 +1,4 @@
-* {
+*, *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -89,7 +89,7 @@ a {
                     cursor: pointer;
                     opacity: 0.8;
                 }
-                i {
+                svg {
                     font-size: 12px;
                 }
             }
@@ -141,7 +141,7 @@ a {
                 justify-content: center;
                 align-items: center;
                 opacity: 0;
-                i {
+                svg {
                     font-size: 48px;
                 }
             }
@@ -175,7 +175,7 @@ a {
                 font-size: 14px;
                 color: #AD7D52;
                 @include textOverflow(1);
-                i {
+                svg {
                     margin-right: 5px;
                     color: #627D98;
                 }
@@ -195,7 +195,7 @@ a {
                         color: #627D98;
                     }
                 }
-                i {
+                svg {
                     margin-right: 10px;
                 }
             }
@@ -222,7 +222,7 @@ a {
             a:first-child {
                 margin-right: 15px;
             }
-            i {
+            svg {
                 margin-right: 5px;
                 font-size: 13px;
             }
@@ -256,7 +256,7 @@ a {
                 color: #AD7D52;
                 margin: 10px 0;
                 font-weight: bold;
-                i {
+                svg {
                     margin-right: 5px;
                     color: #627D98;
                 }
@@ -275,7 +275,7 @@ a {
                 padding: 12px 16px;
                 text-align: center;
                 border-radius: 5px;
-                i {
+                svg {
                     margin-right: 5px;
                 }
                 &:first-of-type {
@@ -315,6 +315,7 @@ a {
             p {
                 font-size: 14px;
                 color: #AD7D52;
+                margin-top: 5px;
             }
         }
         .detail-content__heding {
@@ -340,8 +341,12 @@ a {
             &:hover {
                 opacity: 0.8;
             }
-            i {
+            svg {
                 margin-right: 10px;
+            }
+            span {
+                display: inline-block;
+                margin-left: 10px;
             }
         }
     }
@@ -405,3 +410,524 @@ a {
         }
     }
 }
+
+.dashboard {
+    max-width: 1170px;
+    margin: 0 auto;
+    margin-top: 30px;
+    h2 {
+        text-align: center;
+    }
+    .admin-container {
+        margin-top: 30px;
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: repeat(8, 1fr);
+        .menu {
+            grid-column: 1/3;
+            background-color: #76aaf8;
+            border-radius: 12px;
+            overflow: hidden;
+            padding: 10px 0;
+            height: 500px;
+            h4 {
+                text-transform: uppercase;
+                color: #fff;
+                font-size: 22px;
+                text-align: center;
+                padding: 15px 0;
+            }
+            ul {
+                list-style: none;
+                li {
+                    &:hover {
+                        background-color: #397de2;
+                        > a {
+                            color: #fff;
+                        }
+                    }
+                    a {
+                        color: #fff;
+                        display: block;
+                        padding: 14px 16px;
+                        font-size: 18px;
+                        svg {
+                            margin-right: 10px;
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+
+                }
+            }
+        }
+        .content {
+            grid-column: 3/9;
+            background-color: #fff;
+            border-radius: 12px;
+            padding: 20px;
+            .user {
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                padding-bottom: 15px;
+                box-shadow: -8px 8px 10px 0px #76aaf8;
+                .user__avatar {
+                    img {
+                        width: 50px;
+                        height: 50px;
+                        object-fit: cover;
+                        border-radius: 50%;
+                        border: 1px solid #000;
+                        vertical-align: middle;
+                    }
+                }
+                .user__name {
+                    margin: 0 10px;
+                    span {
+                        color: #27AB83;
+                    }
+                }
+                .user__logout {
+                    button {
+                        color: blue;
+                        border: none;
+                        outline: none;
+                        background-color: transparent;
+                        font-size: 16px;
+                        &:hover {
+                            color: rgba(0, 0, 255, 0.6);
+                            cursor: pointer;
+                        }
+                    }
+                }
+            }
+            .user-box {
+                padding: 20px;
+                margin-top: 20px;
+                display: grid;
+                grid-gap: 20px;
+                grid-template-columns: repeat(2, 1fr);
+                .user-heading {
+                    font-size: 20px;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    text-align: left;
+                    margin-left: 10px;
+                    margin-bottom: 20px;
+                }
+                .input-group {
+                    padding: 10px;
+                    display: flex;
+                    flex-flow: row wrap;
+                    align-items: center;
+                    label {
+                        flex: 0 1 100%;
+                    }
+                    input {
+                        height: 36px;
+                        width: 80%;
+                        padding: 0 8px;
+                    }
+                    span {
+                        color: blue;
+                        margin-left: 10px;
+                        &:hover {
+                            cursor: pointer;
+                            opacity: 0.8;
+                        }
+                    }
+                }
+                .user-info {
+                    grid-column: 1/2;
+                }
+                .change-password {
+                    grid-column: 2/3;
+                }
+                button {
+                    padding: 14px 0;
+                    text-transform: uppercase;
+                    background-color: #76aaf8;
+                    color: #fff;
+                    font-weight: bold;
+                    border-radius: 5px;
+                    border: none;
+                    outline: none;
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.8;
+                    }
+                }
+            }
+        }
+    }
+    p {
+        text-align: center;
+        margin-top: 10px;
+    }
+}
+.book-container {
+    padding: 0 20px;
+    .book-heading {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 0 20px;
+        h2 {
+            text-transform: uppercase;
+        }
+        a {
+            padding: 12px 16px;
+            background-color: transparent;
+            border: 1px solid #3EBD93;
+            box-shadow: 0px 1px 5px 0px #3EBD93;
+            color: #000;;
+            border-radius: 5px;
+            &:hover {
+                opacity: 0.5;
+            }
+        }
+    }
+    .book-content {
+        .list-book {
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            text-align: center;
+            padding-top: 10px;
+            margin-bottom: 12px;
+            border-radius: 12px;
+            box-shadow: 0px 2px 5px 0px #3EBD93;
+            overflow: hidden;
+            &:hover {
+                background-color: #e8f1ff;
+                > .col7, .col8 {
+                    background-color: #c7dbf9;
+                }
+            }
+            &:first-of-type {
+                padding: 20px 0;
+                box-shadow: 0px 2px 10px 0px #76aaf8;
+            }
+            img {
+                width: 50%;
+                height: 80px;
+                vertical-align: middle;
+                object-fit: cover;
+            }
+            a {
+                margin: 0 5px;
+                &:first-of-type {
+                    color: green;
+                }
+                &:last-of-type {
+                    color: red;
+                }
+                &:hover {
+                    opacity: 0.8;
+                }
+            }
+            .col {
+                padding: 10px 0;
+                align-self: center;
+            }
+            .col2 {
+                grid-column: 2/4;
+            }
+            .col3 {
+                grid-column: 4/7;
+            }
+            .col4 {
+                grid-column: 7/9;
+            }
+            .col5 {
+                grid-column: 9/11;
+            }
+            .col6 {
+                grid-column: 11/13;
+                a:hover {
+                    cursor: pointer;
+                }
+            }
+            .col7 {
+                grid-column: 1/7;
+                background-color: #f5f5f5;
+                font-size: 14px;
+            }
+            .col8 {
+                grid-column: 7/13;
+                background-color: #f5f5f5;
+                font-size: 14px;
+            }
+        }
+    } 
+    .pagination {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        ul {
+            list-style: none;
+            li {
+                float: left;
+                button {
+                    display: inline-block;
+                    width: 40px;
+                    height: 40px;
+                    background-color: #76aaf8;
+                    margin: 5px;
+                    text-align: center;
+                    line-height: 40px;
+                    border-radius: 5px;
+                    color: #fff;
+                    border: none;
+                    outline: none;
+                    &:hover {
+                        opacity: 0.8;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+}
+.addbook-container {
+    padding: 0 20px;
+    .addbook-heading {
+        padding: 40px 0 20px;
+        h2 {
+            text-transform: uppercase;
+        }
+    }
+    .addbook-content {
+        padding: 10px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;  
+        grid-gap: 40px;
+        .input-group {
+            margin: 20px 0;
+            label {
+                display: block;
+                margin-bottom: 5px;
+            }
+            input {
+                height: 36px;
+                width: 100%;
+                padding: 0 8px;
+            }
+            textarea {
+                width: 100%;
+                padding: 8px;
+                height: 450px;
+                resize: none;
+            }
+            select {
+                width: 100%;
+                height: 36px;
+                padding: 0 8px;
+            }
+            .group {
+                display: flex;
+                margin-top: 10px;
+                span {
+                    display: inline-block;
+                    margin: 5px;
+                    color: blue;
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.8;
+                    }
+                }
+                a {
+                    display: inline-block;
+                    margin: 5px;
+                    color: green;
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.8;
+                    }
+                }
+            }
+        }
+        button {
+            width: 100%;
+            padding: 16px 0;
+            font-size: 16px;
+            border: none;
+            outline: none;
+            background-color: #3EBD93;
+            color: #fff;
+            border-radius: 2px;
+            &:hover {
+                cursor: pointer;
+                opacity: 0.8;
+            }
+        }
+        a#cancel {
+            display: block;
+            width: 100%;
+            padding: 16px 0;
+            margin-top: 20px;
+            background-color: red;
+            color: #fff;
+            border-radius: 2px;
+            text-align: center;
+            &:hover {
+                cursor: pointer;
+                opacity: 0.8;
+            }
+        }
+    }
+}
+.category-container {
+    padding: 0 20px;
+    .category-heading {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 0 20px;
+        h2 {
+            text-transform: uppercase;
+        }
+    }
+    .category-content {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
+        .left {
+            grid-column: 1/3;
+        }
+        .right {
+            grid-column: 3/4;
+            h4 {
+                margin-bottom: 5px;
+            }
+            .input-group {
+                margin-bottom: 25px;
+                input {
+                    padding: 8px;
+                    width: 65%;
+                }
+                button {
+                    width: 30%;
+                    padding: 8px;
+                    outline: none;
+                    margin-left: 5px;
+                    background-color: transparent;
+                    border: 1px solid #3EBD93;
+                    box-shadow: 0px 1px 5px 0px #3EBD93;
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.6;
+                    }
+                }
+            }
+        }
+        .list-category {
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+            text-align: center;
+            padding-top: 10px;
+            margin-bottom: 12px;
+            border-radius: 12px;
+            box-shadow: 0px 2px 5px 0px #3EBD93;
+            overflow: hidden;
+            &:hover {
+                background-color: #e8f1ff;
+                > .col5, .col6 {
+                    background-color: #c7dbf9;
+                }
+            }
+            &:first-of-type {
+                padding: 20px 0;
+                box-shadow: 0px 2px 10px 0px #76aaf8;
+            }
+            a {
+                margin: 0 5px;
+                &:first-of-type {
+                    color: green;
+                }
+                &:last-of-type {
+                    color: red;
+                }
+                &:hover {
+                    opacity: 0.8;
+                    cursor: pointer;
+                }
+            }
+            .col {
+                padding: 10px 0;
+                align-self: center;
+            }
+            .col2 {
+                grid-column: 2/4;
+            }
+            .col3 {
+                grid-column: 4/7;
+            }
+            .col4 {
+                grid-column: 7/9;
+            }
+            .col5 {
+                grid-column: 1/5;
+                background-color: #f5f5f5;
+                font-size: 14px;
+            }
+            .col6 {
+                grid-column: 5/9;
+                background-color: #f5f5f5;
+                font-size: 14px;
+            }
+        }
+    } 
+    .pagination {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        ul {
+            list-style: none;
+            li {
+                float: left;
+                button {
+                    display: inline-block;
+                    width: 40px;
+                    height: 40px;
+                    background-color: #76aaf8;
+                    margin: 5px;
+                    text-align: center;
+                    line-height: 40px;
+                    border-radius: 5px;
+                    border: none;
+                    outline: none;
+                    color: #fff;
+                    &:hover {
+                        opacity: 0.8;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .container {
+        .header {
+            .search-form {
+                display: none;
+            }
+        }
+        .content {
+            grid-column: 1/9;
+            grid-template-columns: repeat(2, 1fr);
+            .book {
+                grid-column: auto auto;
+            }
+        }
+        .sidebar {
+            display: none;
+        }
+    }
+}
+
